# copilot-study

./: README.md  pyproject.toml
ref_docs/: copilot_command.txt
src/: main.py  storage.py  task.py  ui.py
tests/: test_main.py  test_storage.py  test_task.py  test_ui.py
